p-go-read/k8s/create/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personas-ingress
  namespace: p-go-create
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /crear(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: create-service
                port:
                  number: 8081
